[FIX] website_event: fix flag size in country events snippet
When the country events snippet displayed events specific to a country
(geoip properly installed + upcoming confirmed events in that country),
a flag of the country was displayed but it was way too big.

Difficult to say when the bug was created, at least from 12.0. In 15.1,
that snippet has been refactored anyway and is now entirely different to
make it more attractive.

opw-2904427

closes odoo/odoo#97925

X-original-commit: 79c24fc6e1c6f3d21aec6e7298fd77b6143c31a2

--- a/addons/website_event/static/src/scss/website_event.scss
+++ b/addons/website_event/static/src/scss/website_event.scss
@@ -252,3 +252,10 @@
         z-index: $zindex-dropdown - 1;
     }
 }
+
+// Country snippet
+.country_events_list .o_wevent_sidebar_title > img {
+    max-height: 1em;
+    vertical-align: top;
+    margin: 2px 0.2em 0;
+}
